@@ -32,7 +32,8 @@ extern void rest_network_destroy(struct http_request *request);
 
 //Scan for access points.
 extern bool rest_net_names_test(struct http_request *request);
-extern size_t rest_net_names(struct http_request *request);
+extern size_t rest_net_names_head_handler(struct http_request *request);
+extern size_t rest_net_names_get_handler(struct http_request *request);
 extern void rest_net_names_destroy(struct http_request *request);
 
 #endif
